added search box

--- a/floppies/static/floppies/style.css
+++ b/floppies/static/floppies/style.css
@@ -43,14 +43,30 @@ a:hover {
   text-decoration: underline;
 }
 
+.list-link { 
+    flex: 1;
+    margin: 5px;
+    font-family: "Droid Sans"; font-size: 14px; font-style: normal; font-variant: normal; font-weight: normal; line-height: 15.4px; 
+ }
+
 .archive-link { 
+    margin: 5px;
     font-family: "Droid Sans"; font-size: 10px; font-style: oblique; font-variant: normal; font-weight: normal; line-height: 15.4px; 
  }
 
- .pagination {
+.sidebar {
+  display: flex;
+}
+
+.pagination {
     padding-top: 20px;
  }
 
- .entries-list {
+.entries-list {
     margin: 10px;
  }
+
+.search-form {
+   flex: 1;
+   margin: 5px;
+} 
