adding few scripts

--- a/floppies/templates/entry_form.html
+++ b/floppies/templates/entry_form.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 {% load static %}
-
 {% block content %}
-<script type="application/javascript" src="{% static 'floppies/functions.js' %}"></script>   
+<script type="application/javascript" src="{% static 'floppies/functions.js' %}"></script>  
+
 <h1>{{ entry.title }}</h1>
 <a href="https://archive.org/details/{{ entry.identifier }}" class="archive-link">Archive</a>
 <form method="post">
     {% csrf_token %}
+    {{ form.text | safe }}
+    {{ form.media }}
     <div>
         {{ form.non_field_errors }}
      <div>{{ form.uploaded.as_field_group }}
@@ -29,14 +31,15 @@
         {{ form.date.as_field_group }}
         {{ form.collections.as_field_group }}
         {{ form.mediatype.as_field_group }}
-        
+    
         {{ form.languages.as_field_group }}
-        
-        {{ form.archive.as_field_group }}
+        {{ form.zipArchives.as_field_group }}
         {{ form.photos.as_field_group }}
+        {{ form.fluxFiles.as_field_group }}
         {{ form.randoFiles.as_field_group }}
         
         {{ form.created_on.as_field_group }}
+
     </div>
     </div>
     <button type="submit">Save</button>
