--- a/floppies/static/floppies/style.css
+++ b/floppies/static/floppies/style.css
@@ -70,3 +70,18 @@ a:hover {
    flex: 1;
    margin: 5px;
 } 
+
+.topCheckBoxContainer {
+   margin: 5px;
+   display: flex;
+   flex-wrap: wrap;
+}
+
+
+.topCheckBox {
+   margin: 10px;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   align-items: center;
+}
