--- a/floppies/templates/base.html
+++ b/floppies/templates/base.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Droid+Sans" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/static/floppies/style.css">
     <title>{% block title %}Victor Archive{% endblock %}</title>
+    <meta charset="UTF-8">
 </head>
 
 <body>
